<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.project.csipsimple_example.UpdateRegistrationActivity"
    tools:showIn="@layout/activity_update_registration">

    <EditText
        android:id="@+id/et_displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/display_name"
        android:ems="10"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_below="@id/et_displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/et_domain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/domain"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_domain"
        android:ems="10"
        android:hint="@string/pass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_update_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_registration"
        android:layout_below="@+id/et_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
